mule-user-guide/v/3.4/_toc.adoc
// TOC文件

*  link:/mule-user-guide/v/3.4/index[骡子运行时间]
**  link:/mule-user-guide/v/3.4/hardware-and-software-requirements[硬件和软件要求]
**  link:/mule-user-guide/v/3.4/downloading-and-launching-mule-esb[下载并启动Mule ESB]
**  link:/mule-user-guide/v/3.4/installing-an-enterprise-license[安装企业许可证]
**  link:/mule-user-guide/v/3.4/mule-fundamentals[骡子基础]
***  link:/getting-started/build-a-hello-world-application[构建一个Hello World应用程序]
***  link:/mule-user-guide/v/3.4/mule-concepts[骡子概念]
***  link:/mule-user-guide/v/3.4/elements-in-a-mule-flow[骡子流中的元素]
****  link:/mule-user-guide/v/3.4/mule-endpoints-and-connectors[Mule端点和连接器]
****  link:/mule-user-guide/v/3.4/mule-components[Mule组件]
****  link:/mule-user-guide/v/3.4/mule-transformers[骡变形金刚]
****  link:/mule-user-guide/v/3.4/mule-filters-wrappers-and-routers[Mule过滤器包装和路由器]
****  link:/mule-user-guide/v/3.4/mule-exception-strategies[骡子例外策略]
***  link:/mule-user-guide/v/3.4/mule-message-structure[Mule消息结构]
***  link:/mule-user-guide/v/3.4/message-state[消息状态]
***  link:/mule-user-guide/v/3.4/global-elements[全球元素]
***  link:/mule-user-guide/v/3.4/anypoint-connector-tutorial[Anypoint连接器教程]
***  link:/mule-user-guide/v/3.4/starting-and-stopping-mule-esb[启动和停止Mule ESB]
***  link:/mule-user-guide/v/3.4/mule-application-architecture[Mule应用程序架构]
***  link:/mule-user-guide/v/3.4/flows-and-subflows[流量和子流量]
****  link:/mule-user-guide/v/3.4/flow-architecture-advanced-use-case[Flow Architecture高级用例]
***  link:/mule-user-guide/v/3.4/mule-security[安全在骡子]
***  link:/mule-user-guide/v/3.4/saas-integration-simple-mapping[SaaS集成简单映射]
**  link:/mule-user-guide/v/3.4/developing[发展]
***  link:/mule-user-guide/v/3.4/message-sources[消息来源]
****  link:/mule-user-guide/v/3.4/configuring-endpoints[配置端点]
*****  link:/mule-user-guide/v/3.4/mule-endpoint-uris[Mule端点URI]
****  link:/mule-user-guide/v/3.4/connecting-using-transports[使用传输连接]
*****  link:/mule-user-guide/v/3.4/configuring-a-transport[配置传输]
****  link:/mule-user-guide/v/3.4/studio-endpoints[Studio终点]
*****  link:/mule-user-guide/v/3.4/ajax-endpoint-reference[Ajax端点参考]
*****  link:/mule-user-guide/v/3.4/database-jdbc-endpoint-reference[数据库（JDBC）端点参考]
*****  link:/mule-user-guide/v/3.4/file-endpoint-reference[文件端点引用]
*****  link:/mule-user-guide/v/3.4/ftp-endpoint-reference[FTP端点参考]
*****  link:/mule-user-guide/v/3.4/generic-endpoint-reference[通用端点参考]
*****  link:/mule-user-guide/v/3.4/http-endpoint-reference[HTTP端点参考]
*****  link:/mule-user-guide/v/3.4/imap-endpoint-reference[IMAP端点参考]
*****  link:/mule-user-guide/v/3.4/pop3-endpoint-reference[POP3端点参考]
*****  link:/mule-user-guide/v/3.4/quartz-endpoint-reference[Quartz端点参考]
*****  link:/mule-user-guide/v/3.4/sap-endpoint-reference[SAP端点参考]
*****  link:/mule-user-guide/v/3.4/servlet-endpoint-reference[Servlet端点参考]
*****  link:/mule-user-guide/v/3.4/sftp-endpoint-reference[SFTP端点参考]
*****  link:/mule-user-guide/v/3.4/wmq-endpoint-reference[WMQ端点参考]
****  link:/mule-user-guide/v/3.4/anypoint-connectors[Anypoint连接器]
*****  link:/mule-user-guide/v/3.4/installing-connectors[安装连接器]
*****  link:/mule-user-guide/v/3.4/using-a-connector-to-access-an-oauth-api[使用连接器访问OAuth API]
*****  link:/mule-user-guide/v/3.4/concur-connector[Concur连接器]
***  link:/mule-user-guide/v/3.4/components[组件]
****  link:/mule-user-guide/v/3.4/configuring-components[配置组件]
*****  link:/mule-user-guide/v/3.4/configuring-java-components[配置Java组件]
*****  link:/mule-user-guide/v/3.4/developing-components[开发组件]
*****  link:/mule-user-guide/v/3.4/entry-point-resolver-configuration-reference[入口点解析器配置参考]
*****  link:/mule-user-guide/v/3.4/component-bindings[组件绑定]
*****  link:/mule-user-guide/v/3.4/using-interceptors[使用拦截器]
****  link:/mule-user-guide/v/3.4/echo-component-reference[回声组件参考]
****  link:/mule-user-guide/v/3.4/expression-component-reference[表达组件参考]
****  link:/mule-user-guide/v/3.4/flow-ref-component-reference[流程参考组件参考]
****  link:/mule-user-guide/v/3.4/groovy-component-reference[Groovy组件参考]
****  link:/mule-user-guide/v/3.4/java-component-reference[Java组件参考]
****  link:/mule-user-guide/v/3.4/javascript-component-reference[JavaScript组件参考]
****  link:/mule-user-guide/v/3.4/logger-component-reference[记录器组件参考]
****  link:/mule-user-guide/v/3.4/python-component-reference[Python组件参考]
****  link:/mule-user-guide/v/3.4/rest-component-reference[REST组件参考]
****  link:/mule-user-guide/v/3.4/ruby-component-reference[Ruby组件参考]
****  link:/mule-user-guide/v/3.4/script-component-reference[脚本组件参考]
****  link:/mule-user-guide/v/3.4/soap-component-reference[SOAP组件参考]
***  link:/mule-user-guide/v/3.4/filters[过滤器]
****  link:/mule-user-guide/v/3.4/using-filters[使用过滤器]
****  link:/mule-user-guide/v/3.4/custom-filter[定制过滤器]
****  link:/mule-user-guide/v/3.4/exception-filter[异常过滤器]
****  link:/mule-user-guide/v/3.4/filter-ref[过滤器参考]
****  link:/mule-user-guide/v/3.4/logic-filter[逻辑滤波器]
****  link:/mule-user-guide/v/3.4/message-filter[消息过滤器]
****  link:/mule-user-guide/v/3.4/message-property-filter[消息属性过滤器]
****  link:/mule-user-guide/v/3.4/regex-filter[正则表达式过滤器]
****  link:/mule-user-guide/v/3.4/schema-validation-filter[模式验证过滤器]
****  link:/mule-user-guide/v/3.4/wildcard-filter[通配符过滤器]
***  link:/mule-user-guide/v/3.4/routers[路由器]
****  link:/mule-user-guide/v/3.4/routing-message-processors[路由消息处理器]
****  link:/mule-user-guide/v/3.4/all-flow-control-reference[所有流量控制参考]
****  link:/mule-user-guide/v/3.4/choice-flow-control-reference[选择流量控制参考]
****  link:/mule-user-guide/v/3.4/splitter-flow-control-reference[分流器流量控制参考]
***  link:/mule-user-guide/v/3.4/scopes[领域]
****  link:/mule-user-guide/v/3.4/async-scope-reference[异步范围参考]
****  link:/mule-user-guide/v/3.4/cache-scope[缓存范围]
****  link:/mule-user-guide/v/3.4/foreach[的foreach]
****  link:/mule-user-guide/v/3.4/message-enricher[消息Enricher]
****  link:/mule-user-guide/v/3.4/transactional[交易]
****  link:/mule-user-guide/v/3.4/until-successful-scope[直到成功范围]
***  link:/mule-user-guide/v/3.4/transformers[变形金刚]
****  link:/mule-user-guide/v/3.4/using-transformers[使用变形金刚]
*****  link:/mule-user-guide/v/3.4/transformers-configuration-reference[变压器配置参考]
*****  link:/mule-user-guide/v/3.4/native-support-for-json[本机支持JSON]
*****  link:/mule-user-guide/v/3.4/xmlprettyprinter-transformer[XmlPrettyPrinter变压器]
****  link:/mule-user-guide/v/3.4/creating-custom-transformers[创建自定义变形金刚]
*****  link:/mule-user-guide/v/3.4/creating-flow-objects-and-transformers-using-annotations[使用注释创建流对象和变形金刚]
*****  link:/mule-user-guide/v/3.4/function-annotation[功能注释]
*****  link:/mule-user-guide/v/3.4/groovy-annotation[Groovy注释]
*****  link:/mule-user-guide/v/3.4/inboundattachments-annotation[InboundAttachments注释]
*****  link:/mule-user-guide/v/3.4/inboundheaders-annotation[InboundHeaders注解]
*****  link:/mule-user-guide/v/3.4/lookup-annotation[查找注释]
*****  link:/mule-user-guide/v/3.4/mule-annotation[骡子注释]
*****  link:/mule-user-guide/v/3.4/outboundattachments-annotation[OutboundAttachments注释]
*****  link:/mule-user-guide/v/3.4/outboundheaders-annotation[OutboundHeaders注释]
*****  link:/mule-user-guide/v/3.4/payload-annotation[有效载荷注释]
*****  link:/mule-user-guide/v/3.4/schedule-annotation[计划注释]
*****  link:/mule-user-guide/v/3.4/transformer-annotation[变压器注释]
*****  link:/mule-user-guide/v/3.4/xpath-annotation[XPath注释]
*****  link:/mule-user-guide/v/3.4/creating-custom-transformer-classes[创建自定义转换器类]
****  link:/mule-user-guide/v/3.4/append-string-transformer-reference[附加字符串转换器参考]
****  link:/mule-user-guide/v/3.4/attachment-transformer-reference[附件变压器参考]
****  link:/mule-user-guide/v/3.4/expression-transformer-reference[表达式转换器参考]
****  link:/mule-user-guide/v/3.4/java-transformer-reference[Java变压器参考]
****  link:/mule-user-guide/v/3.4/object-to-xml-transformer-reference[对XML转换器参考的对象]
****  link:/mule-user-guide/v/3.4/parse-template-reference[解析模板参考]
****  link:/mule-user-guide/v/3.4/property-transformer-reference[属性变换器参考]
****  link:/mule-user-guide/v/3.4/script-transformer-reference[脚本变换器参考]
****  link:/mule-user-guide/v/3.4/session-variable-transformer-reference[会话变量变换器参考]
****  link:/mule-user-guide/v/3.4/set-payload-transformer-reference[设置有效负载变换器参考]
****  link:/mule-user-guide/v/3.4/transformer-reference[变压器参考]
****  link:/mule-user-guide/v/3.4/variable-transformer-reference[可变变压器参考]
****  link:/mule-user-guide/v/3.4/xml-to-object-transformer-reference[XML到对象转换器参考]
****  link:/mule-user-guide/v/3.4/xslt-transformer-reference[XSLT变压器参考]
***  link:/mule-user-guide/v/3.4/business-events[商业活动]
***  link:/mule-user-guide/v/3.4/error-handling[错误处理]
****  link:/mule-user-guide/v/3.4/catch-exception-strategy[捕捉异常策略]
****  link:/mule-user-guide/v/3.4/choice-exception-strategy[选择例外策略]
****  link:/mule-user-guide/v/3.4/reference-exception-strategy[参考例外策略]
****  link:/mule-user-guide/v/3.4/rollback-exception-strategy[回滚异常策略]
****  link:/mule-user-guide/v/3.4/exception-strategy-most-common-use-cases[异常策略最常见的用例]
***  link:/mule-user-guide/v/3.4/transaction-management[交易管理]
****  link:/mule-user-guide/v/3.4/single-resource-transactions[单一资源交易]
****  link:/mule-user-guide/v/3.4/multiple-resource-transactions[多资源交易]
****  link:/mule-user-guide/v/3.4/xa-transactions[XA交易]
***  link:/mule-user-guide/v/3.4/securing[保护]
****  link:/mule-user-guide/v/3.4/anypoint-enterprise-security[Anypoint企业安全]
*****  link:/mule-user-guide/v/3.4/installing-anypoint-enterprise-security[安装Anypoint Enterprise Security]
*****  link:/mule-user-guide/v/3.4/mule-secure-token-service[Mule安全令牌服务]
*****  link:/mule-user-guide/v/3.4/creating-an-oauth-2.0-web-service-provider[创建一个Oauth 2.0 Web服务提供程序]
*****  link:/mule-user-guide/v/3.4/authorization-grant-types[授权授予类型]
*****  link:/mule-user-guide/v/3.4/mule-credentials-vault[Mule证书库]
*****  link:/mule-user-guide/v/3.4/mule-message-encryption-processor[Mule消息加密处理器]
*****  link:/mule-user-guide/v/3.4/pgp-encrypter[PGP加密器]
*****  link:/mule-user-guide/v/3.4/mule-digital-signature-processor[Mule数字签名处理器]
*****  link:/mule-user-guide/v/3.4/mule-filter-processor[Mule滤波处理器]
*****  link:/mule-user-guide/v/3.4/mule-crc32-processor[Mule CRC32处理器]
*****  link:/mule-user-guide/v/3.4/anypoint-enterprise-security-example-application[Anypoint企业安全示例应用程序]
*****  link:/mule-user-guide/v/3.4/mule-sts-oauth-2.0-example-application[Mule STS Oauth 2.0示例应用程序]
****  link:/mule-user-guide/v/3.4/configuring-security[配置安全性]
*****  link:/mule-user-guide/v/3.4/configuring-the-spring-security-manager[配置Spring Security Manager]
*****  link:/mule-user-guide/v/3.4/component-authorization-using-spring-security[使用Spring Security的组件授权]
*****  link:/mule-user-guide/v/3.4/setting-up-ldap-provider-for-spring-security[为Spring Security设置LDAP提供程序]
*****  link:/mule-user-guide/v/3.4/upgrading-from-acegi-to-spring-security[从Acegi升级到Spring Security]
*****  link:/mule-user-guide/v/3.4/encryption-strategies[加密策略]
*****  link:/mule-user-guide/v/3.4/pgp-security[PGP安全]
*****  link:/mule-user-guide/v/3.4/jaas-security[Jaas安全]
*****  link:/mule-user-guide/v/3.4/saml-module[SAML模块]
***  link:/mule-user-guide/v/3.4/mule-expression-language-mel[Mule表达语言MEL]
****  link:/mule-user-guide/v/3.4/mule-expression-language-basic-syntax[Mule表达式语言基本语法]
****  link:/mule-user-guide/v/3.4/mule-expression-language-examples[Mule表达语言示例]
****  link:/mule-user-guide/v/3.4/mule-expression-language-reference[Mule表达式语言参考]
*****  link:/mule-user-guide/v/3.4/mule-expression-language-date-and-time-functions[Mule表达语言日期和时间函数]
****  link:/mule-user-guide/v/3.4/mule-expression-language-tips[Mule表达语言技巧]
***  link:/mule-user-guide/v/3.4/mule-and-maven[骡子和Maven]
****  link:/mule-user-guide/v/3.4/converting-maven-into-studio[将Maven转换为Studio]
****  link:/mule-user-guide/v/3.4/converting-studio-into-maven[将Studio转换为Maven]
***  link:/mule-user-guide/v/3.4/advanced-usage-of-mule-esb[Mule ESB的高级用法]
****  link:/mule-user-guide/v/3.4/storing-objects-in-the-registry[将对象存储在注册表中]
****  link:/mule-user-guide/v/3.4/object-scopes[对象范围]
****  link:/mule-user-guide/v/3.4/using-mule-with-spring[春天使用骡子]
*****  link:/mule-user-guide/v/3.4/sending-and-receiving-mule-events-in-spring[在春季发送和接收Mule事件]
*****  link:/mule-user-guide/v/3.4/spring-application-contexts[Spring应用程序上下文]
*****  link:/mule-user-guide/v/3.4/using-spring-beans-as-flow-components[使用Spring Beans作为流程组件]
****  link:/mule-user-guide/v/3.4/configuring-properties[配置属性]
****  link:/mule-user-guide/v/3.4/configuring-cluster-nodes[配置群集节点]
****  link:/mule-user-guide/v/3.4/distributed-file-polling[分布式文件轮询]
****  link:/mule-user-guide/v/3.4/distributed-locking[分布式锁定]
****  link:/mule-user-guide/v/3.4/streaming[流]
****  link:/mule-user-guide/v/3.4/about-configuration-builders[关于配置建造者]
****  link:/mule-user-guide/v/3.4/internationalizing-strings[国际化字符串]
****  link:/mule-user-guide/v/3.4/bootstrapping-the-registry[引导注册表]
****  link:/mule-user-guide/v/3.4/tuning-performance[调整性能]
****  link:/mule-user-guide/v/3.4/mule-agents[骡代理]
*****  link:/mule-user-guide/v/3.4/agent-security-disabled-weak-ciphers[代理安全：禁用弱密码]
*****  link:/mule-user-guide/v/3.4/jmx-management[JMX管理]
****  link:/mule-user-guide/v/3.4/mule-object-stores[骡子对象商店]
****  link:/mule-user-guide/v/3.4/flow-processing-strategies[流程处理策略]
****  link:/mule-user-guide/v/3.4/reliability-patterns[可靠性模式]
****  link:/mule-user-guide/v/3.4/configuring-queues[配置队列]
****  link:/mule-user-guide/v/3.4/configuring-reconnection-strategies[配置重新连接策略]
****  link:/mule-user-guide/v/3.4/using-the-mule-client[使用Mule客户端]
****  link:/mule-user-guide/v/3.4/using-web-services[使用Web服务]
*****  link:/mule-user-guide/v/3.4/proxying-web-services[代理Web服务]
*****  link:/mule-user-guide/v/3.4/using-.net-web-services-with-mule[与Mule一起使用.NET Web服务]
****  link:/mule-user-guide/v/3.4/passing-additional-arguments-to-the-jvm-to-control-mule[将附加参数传递给JVM以控制Mule]
**  link:/mule-user-guide/v/3.4/debugging[调试]
***  link:/mule-user-guide/v/3.4/troubleshooting[故障排除]
****  link:/mule-user-guide/v/3.4/configuring-mule-stacktraces[配置Mule Stacktraces]
****  link:/mule-user-guide/v/3.4/logging[记录]
*****  link:/mule-user-guide/v/3.4/logging-with-mule-esb-3.x[记录Mule ESB 3.x]
****  link:/mule-user-guide/v/3.4/step-debugging[步骤调试]
**  link:/mule-user-guide/v/3.4/testing[测试]
***  link:/mule-user-guide/v/3.4/introduction-to-testing-mule[测试骡简介]
***  link:/mule-user-guide/v/3.4/unit-testing[单元测试]
***  link:/mule-user-guide/v/3.4/functional-testing[功能测试]
***  link:/mule-user-guide/v/3.4/testing-strategies[测试策略]
**  link:/mule-user-guide/v/3.4/deploying[部署]
***  link:/mule-user-guide/v/3.4/deployment-scenarios[部署方案]
****  link:/mule-user-guide/v/3.4/choosing-the-right-clustering-topology[选择正确的群集拓扑]
****  link:/mule-user-guide/v/3.4/embedding-mule-in-a-java-application-or-webapp[将Mule嵌入到Java应用程序或Web应用程序中]
****  link:/mule-user-guide/v/3.4/deploying-mule-to-jboss[部署Mule到JBoss]
*****  link:/mule-user-guide/v/3.4/mule-as-mbean[作为MBean的骡子]
****  link:/mule-user-guide/v/3.4/deploying-mule-to-weblogic[将Mule部署到WebLogic]
****  link:/mule-user-guide/v/3.4/deploying-mule-to-websphere[将Mule部署到WebSphere]
****  link:/mule-user-guide/v/3.4/deploying-mule-as-a-service-to-tomcat[将Mule作为服务部署到Tomcat]
****  link:/mule-user-guide/v/3.4/application-server-based-hot-deployment[基于应用服务器的热部署]
****  link:/mule-user-guide/v/3.4/classloader-control-in-mule[Mule中的类加载器控制]
***  link:/mule-user-guide/v/3.4/mule-high-availability-ha-clusters[Mule高可用性HA集群]
****  link:/mule-user-guide/v/3.4/evaluating-mule-high-availability-clusters-demo[评估Mule高可用性集群演示]
*****  link:/mule-user-guide/v/3.4/1-installing-the-demo-bundle[1  - 安装演示软件包]
*****  link:/mule-user-guide/v/3.4/2-creating-a-cluster[2  - 创建一个群集]
*****  link:/mule-user-guide/v/3.4/3-deploying-an-application[3  - 部署应用程序]
*****  link:/mule-user-guide/v/3.4/4-applying-load-to-the-cluster[4  - 将加载应用于群集]
*****  link:/mule-user-guide/v/3.4/5-witnessing-failover[5  - 见证故障转移]
*****  link:/mule-user-guide/v/3.4/6-troubleshooting-and-next-steps[6  - 故障排除和后续步骤]
***  link:/mule-user-guide/v/3.4/mule-deployment-model[Mule部署模型]
****  link:/mule-user-guide/v/3.4/hot-deployment[热部署]
****  link:/mule-user-guide/v/3.4/application-deployment[应用程序部署]
****  link:/mule-user-guide/v/3.4/application-format[申请格式]
****  link:/mule-user-guide/v/3.4/deployment-descriptor[部署描述符]
***  link:/mule-user-guide/v/3.4/configuring-logging[配置日志记录]
***  link:/mule-user-guide/v/3.4/mule-server-notifications[Mule服务器通知]
***  link:/mule-user-guide/v/3.4/profiling-mule[剖析Mule]
***  link:/mule-user-guide/v/3.4/hardening-your-mule-installation[加强你的骡子安装]
***  link:/mule-user-guide/v/3.4/configuring-mule-for-different-deployment-scenarios[针对不同的部署方案配置Mule]
****  link:/mule-user-guide/v/3.4/configuring-mule-as-a-linux-or-unix-daemon[将Mule配置为Linux或Unix守护进程]
****  link:/mule-user-guide/v/3.4/configuring-mule-as-a-windows-service[将Mule配置为Windows服务]
****  link:/mule-user-guide/v/3.4/configuring-mule-to-run-from-a-script[配置Mule从脚本运行]
**  link:/mule-user-guide/v/3.4/extending[扩展]
***  link:/mule-user-guide/v/3.4/extending-components[扩展组件]
***  link:/mule-user-guide/v/3.4/custom-message-processors[自定义消息处理器]
***  link:/mule-user-guide/v/3.4/creating-example-archetypes[创建示例原型]
***  link:/mule-user-guide/v/3.4/creating-a-custom-xml-namespace[创建一个自定义的XML命名空间]
***  link:/mule-user-guide/v/3.4/creating-module-archetypes[创建模块原型]
***  link:/mule-user-guide/v/3.4/creating-catalog-archetypes[创建目录原型]
***  link:/mule-user-guide/v/3.4/creating-project-archetypes[创建项目原型]
***  link:/mule-user-guide/v/3.4/creating-transports[创建传输]
****  link:/mule-user-guide/v/3.4/transport-archetype[运输原型]
****  link:/mule-user-guide/v/3.4/transport-service-descriptors[运输服务描述符]
***  link:/mule-user-guide/v/3.4/creating-custom-routers[创建自定义路由器]
**  link:/mule-user-guide/v/3.4/reference[参考]
***  link:/mule-user-guide/v/3.4/team-development-with-mule[与Mule合作开发团队]
****  link:/mule-user-guide/v/3.4/modularizing-your-configuration-files-for-team-development[模块化您的配置文件以进行团队开发]
****  link:/mule-user-guide/v/3.4/using-side-by-side-configuration-files[使用并行配置文件]
****  link:/mule-user-guide/v/3.4/using-parameters-in-your-configuration-files[在配置文件中使用参数]
****  link:/mule-user-guide/v/3.4/using-modules-in-your-application[在应用程序中使用模块]
****  link:/mule-user-guide/v/3.4/sharing-custom-code[共享自定义代码]
****  link:/mule-user-guide/v/3.4/sharing-custom-configuration-fragments[共享自定义配置片段]
****  link:/mule-user-guide/v/3.4/sharing-custom-configuration-patterns[共享自定义配置模式]
****  link:/mule-user-guide/v/3.4/sharing-applications[共享应用程序]
****  link:/mule-user-guide/v/3.4/sustainable-software-development-practices-with-mule[可持续软件开发实践与Mule]
*****  link:/mule-user-guide/v/3.4/reproducible-builds[可复制的版本]
*****  link:/mule-user-guide/v/3.4/continuous-integration[持续集成]
***  link:/mule-user-guide/v/3.4/configuration-patterns[配置模式]
****  link:/mule-user-guide/v/3.4/understanding-mule-configuration[了解骡子配置]
*****  link:/mule-user-guide/v/3.4/about-the-xml-configuration-file[关于XML配置文件]
****  link:/mule-user-guide/v/3.4/choosing-between-flows-and-patterns[选择流和模式]
*****  link:/mule-user-guide/v/3.4/using-flows-for-service-orchestration[使用流进行服务编排]
****  link:/mule-user-guide/v/3.4/using-mule-configuration-patterns[使用Mule配置模式]
*****  link:/mule-user-guide/v/3.4/pattern-based-configuration[基于模式的配置]
*****  link:/mule-user-guide/v/3.4/simple-service-pattern[简单的服务模式]
*****  link:/mule-user-guide/v/3.4/bridge-pattern[桥梁模式]
*****  link:/mule-user-guide/v/3.4/validator-pattern[验证器模式]
*****  link:/mule-user-guide/v/3.4/web-service-proxy-pattern[Web服务代理模式]
*****  link:/mule-user-guide/v/3.4/http-proxy-pattern[HTTP代理模式]
*****  link:/mule-user-guide/v/3.4/about-mule-configuration[关于Mule配置]
*****  link:/mule-user-guide/v/3.4/understanding-enterprise-integration-patterns-using-mule[使用Mule了解企业集成模式]
*****  link:/mule-user-guide/v/3.4/understanding-orchestration-using-mule[了解使用Mule的编排]
*****  link:/mule-user-guide/v/3.4/understanding-configuration-patterns-using-mule[使用Mule了解配置模式]
*****  link:/mule-user-guide/v/3.4/connecting-with-transports-and-connectors[连接运输和连接器]
*****  link:/mule-user-guide/v/3.4/using-mule-with-web-services[在Web服务中使用Mule]
***  link:/mule-user-guide/v/3.4/general-configuration-reference[一般配置参考]
****  link:/mule-user-guide/v/3.4/bpm-configuration-reference[BPM配置参考]
****  link:/mule-user-guide/v/3.4/component-configuration-reference[组件配置参考]
****  link:/mule-user-guide/v/3.4/endpoint-configuration-reference[端点配置参考]
****  link:/mule-user-guide/v/3.4/exception-strategy-configuration-reference[例外策略配置参考]
****  link:/mule-user-guide/v/3.4/filters-configuration-reference[过滤器配置参考]
****  link:/mule-user-guide/v/3.4/global-settings-configuration-reference[全局设置配置参考]
****  link:/mule-user-guide/v/3.4/notifications-configuration-reference[通知配置参考]
****  link:/mule-user-guide/v/3.4/properties-configuration-reference[属性配置参考]
****  link:/mule-user-guide/v/3.4/security-manager-configuration-reference[安全管理器配置参考]
****  link:/mule-user-guide/v/3.4/transactions-configuration-reference[事务配置参考]
***  link:/mule-user-guide/v/3.4/transports-reference[传输参考]
****  link:/mule-user-guide/v/3.4/ajax-transport-reference[AJAX传输参考]
****  link:/mule-user-guide/v/3.4/ejb-transport-reference[EJB传输参考]
****  link:/mule-user-guide/v/3.4/email-transport-reference[电子邮件传输参考]
****  link:/mule-user-guide/v/3.4/file-transport-reference[文件传输参考]
****  link:/mule-user-guide/v/3.4/ftp-transport-reference[FTP传输参考]
****  link:/mule-user-guide/v/3.4/mulesoft-enterprise-java-connector-for-sap-reference[适用于SAP参考的MuleSoft Enterprise Java连接器]
*****  link:/mule-user-guide/v/3.4/sap-jco-extended-properties[SAP JCo扩展属性]
*****  link:/mule-user-guide/v/3.4/sap-jco-server-services-configuration[SAP JCo服务器服务配置]
*****  link:/mule-user-guide/v/3.4/outbound-endpoint-transactions[出站端点事务]
*****  link:/mule-user-guide/v/3.4/troubleshooting-sap-connector[排除SAP连接器故障]
*****  link:/mule-user-guide/v/3.4/xml-definitions[XML定义]
****  link:/mule-user-guide/v/3.4/http-transport-reference[HTTP传输参考]
****  link:/mule-user-guide/v/3.4/https-transport-reference[HTTPS传输参考]
****  link:/mule-user-guide/v/3.4/imap-transport-reference[IMAP传输参考]
****  link:/mule-user-guide/v/3.4/jdbc-transport-reference[JDBC传输参考]
*****  link:/mule-user-guide/v/3.4/jdbc-transport-performance-benchmark-results[JDBC传输性能基准测试结果]
****  link:/mule-user-guide/v/3.4/jetty-transport-reference[码头运输参考]
*****  link:/mule-user-guide/v/3.4/jetty-ssl-transport[Jetty SSL Transport]
****  link:/mule-user-guide/v/3.4/jms-transport-reference[JMS传输参考]
*****  link:/mule-user-guide/v/3.4/activemq-integration[ActiveMQ集成]
*****  link:/mule-user-guide/v/3.4/hornetq-integration[HornetQ集成]
*****  link:/mule-user-guide/v/3.4/open-mq-integration[打开MQ集成]
*****  link:/mule-user-guide/v/3.4/solace-jms[Solace JMS]
*****  link:/mule-user-guide/v/3.4/tibco-ems-integration[Tibco EMS集成]
****  link:/mule-user-guide/v/3.4/multicast-transport-reference[多播传输参考]
****  link:/mule-user-guide/v/3.4/pop3-transport-reference[POP3传输参考]
****  link:/mule-user-guide/v/3.4/quartz-transport-reference[石英运输参考]
****  link:/mule-user-guide/v/3.4/rmi-transport-reference[RMI传输参考]
****  link:/mule-user-guide/v/3.4/servlet-transport-reference[Servlet传输参考]
****  link:/mule-user-guide/v/3.4/sftp-transport-reference[SFTP传输参考]
****  link:/mule-user-guide/v/3.4/smtp-transport-reference[SMTP传输参考]
****  link:/mule-user-guide/v/3.4/ssl-and-tls-transports-reference[SSL和TLS传输参考]
****  link:/mule-user-guide/v/3.4/stdio-transport-reference[STDIO传输参考]
****  link:/mule-user-guide/v/3.4/tcp-transport-reference[TCP传输参考]
****  link:/mule-user-guide/v/3.4/udp-transport-reference[UDP传输参考]
****  link:/mule-user-guide/v/3.4/vm-transport-reference[VM传输参考]
****  link:/mule-user-guide/v/3.4/mule-wmq-transport-reference[Mule WMQ运输参考]
****  link:/mule-user-guide/v/3.4/wsdl-connectors[WSDL连接器]
****  link:/mule-user-guide/v/3.4/xmpp-transport-reference[XMPP传输参考]
***  link:/mule-user-guide/v/3.4/modules-reference[模块参考]
****  link:/mule-user-guide/v/3.4/atom-module-reference[Atom模块参考]
****  link:/mule-user-guide/v/3.4/bpm-module-reference[BPM模块参考]
*****  link:/mule-user-guide/v/3.4/drools-module-reference[Drools模块参考]
*****  link:/mule-user-guide/v/3.4/jboss-jbpm-module-reference[JBoss jBPM模块参考]
****  link:/mule-user-guide/v/3.4/cxf-module-reference[CXF模块参考]
*****  link:/mule-user-guide/v/3.4/cxf-error-handling[CXF错误处理]
*****  link:/mule-user-guide/v/3.4/cxf-module-configuration-reference[CXF模块配置参考]
*****  link:/mule-user-guide/v/3.4/cxf-module-overview[CXF模块概述]
*****  link:/mule-user-guide/v/3.4/building-web-services-with-cxf[使用CXF构建Web服务]
*****  link:/mule-user-guide/v/3.4/consuming-web-services-with-cxf[使用CXF消费Web服务]
*****  link:/mule-user-guide/v/3.4/enabling-ws-addressing[启用WS-Addressing]
*****  link:/mule-user-guide/v/3.4/enabling-ws-security[启用WS-Security]
*****  link:/mule-user-guide/v/3.4/proxying-web-services-with-cxf[使用CXF代理Web服务]
*****  link:/mule-user-guide/v/3.4/supported-web-service-standards[支持的Web服务标准]
*****  link:/mule-user-guide/v/3.4/using-a-web-service-client-directly[直接使用Web服务客户端]
*****  link:/mule-user-guide/v/3.4/using-http-get-requests[使用HTTP GET请求]
*****  link:/mule-user-guide/v/3.4/using-mtom[使用MTOM]
****  link:/mule-user-guide/v/3.4/data-bindings-reference[数据绑定参考]
****  link:/mule-user-guide/v/3.4/jaas-module-reference[JAAS模块参考]
****  link:/mule-user-guide/v/3.4/jboss-transaction-manager-reference[JBoss事务管理器参考]
****  link:/mule-user-guide/v/3.4/jersey-module-reference[泽西模块参考]
****  link:/mule-user-guide/v/3.4/json-module-reference[JSON模块参考]
****  link:/mule-user-guide/v/3.4/rss-module-reference[RSS模块参考]
****  link:/mule-user-guide/v/3.4/scripting-module-reference[脚本模块参考]
****  link:/mule-user-guide/v/3.4/spring-extras-module-reference[Spring Extras模块参考]
****  link:/mule-user-guide/v/3.4/sxc-module-reference[SXC模块参考]
****  link:/mule-user-guide/v/3.4/xml-module-reference[XML模块参考]
*****  link:/mule-user-guide/v/3.4/domtoxml-transformer[DomToXml变压器]
*****  link:/mule-user-guide/v/3.4/jaxb-bindings[JAXB绑定]
*****  link:/mule-user-guide/v/3.4/jaxb-transformers[JAXB变形金刚]
*****  link:/mule-user-guide/v/3.4/jxpath-extractor-transformer[JXPath提取变压器]
*****  link:/mule-user-guide/v/3.4/xml-namespaces[XML命名空间]
*****  link:/mule-user-guide/v/3.4/xmlobject-transformers[XmlObject变形金刚]
*****  link:/mule-user-guide/v/3.4/xmltoxmlstreamreader-transformer[XmlToXMLStreamReader变换器]
*****  link:/mule-user-guide/v/3.4/xpath-extractor-transformer[XPath提取变压器]
*****  link:/mule-user-guide/v/3.4/xquery-support[XQuery支持]
*****  link:/mule-user-guide/v/3.4/xquery-transformer[XQuery变换器]
*****  link:/mule-user-guide/v/3.4/xslt-transformer[XSLT变压器]
***  link:/mule-user-guide/v/3.4/non-mel-expressions-configuration-reference[非MEL表达式配置参考]
****  link:/mule-user-guide/v/3.4/creating-non-mel-expression-evaluators[创建非MEL表达式评估器]
****  link:/mule-user-guide/v/3.4/using-non-mel-expressions[使用非MEL表达式]
***  link:/mule-user-guide/v/3.4/schema-documentation[模式文档]
****  link:/mule-user-guide/v/3.4/notes-on-mule-3.0-schema-changes[关于Mule 3.0模式更改的注意事项]
***  link:/mule-user-guide/v/3.4/mule-esb-3-and-test-api-javadoc[Mule ESB 3和测试API Javadoc]
***  link:/mule-user-guide/v/3.4/mulesoft-security-update-policy[MuleSoft安全更新政策]
