mule-user-guide/v/3.5/_toc.adoc
// TOC文件

*  link:/mule-user-guide/v/3.5/index[骡子运行时间]
**  link:/mule-user-guide/v/3.5/hardware-and-software-requirements[硬件和软件要求]
**  link:/mule-user-guide/v/3.5/downloading-and-starting-mule-esb[下载并启动Mule ESB]
**  link:/mule-user-guide/v/3.5/installing-an-enterprise-license[安装企业许可证]
***  link:/mule-user-guide/v/3.5/extending-mule[延长骡子]
**  link:/mule-user-guide/v/3.5/mule-fundamentals[骡子基础]
***  link:/getting-started/build-a-hello-world-application[构建一个Hello World Mule应用程序]
***  link:/mule-user-guide/v/3.5/mule-concepts[骡子概念]
****  link:/mule-user-guide/v/3.5/elements-in-a-mule-flow[骡子流中的元素]
*****  link:/mule-user-guide/v/3.5/mule-connectors[Mule连接器]
*****  link:/mule-user-guide/v/3.5/mule-components[Mule组件]
*****  link:/mule-user-guide/v/3.5/mule-transformers[骡变形金刚]
*****  link:/mule-user-guide/v/3.5/mule-filters-scopes-and-routers[Mule过滤器范围和路由器]
*****  link:/mule-user-guide/v/3.5/mule-exception-strategies[骡子例外策略]
***  link:/mule-user-guide/v/3.5/mule-message-structure[Mule消息结构]
***  link:/mule-user-guide/v/3.5/message-state[消息状态]
***  link:/mule-user-guide/v/3.5/global-elements[全球元素]
***  link:/mule-user-guide/v/3.5/mule-application-architecture[Mule应用程序架构]
***  link:/mule-user-guide/v/3.5/flows-and-subflows[流量和子流量]
****  link:/mule-user-guide/v/3.5/flow-architecture-advanced-use-case[Flow Architecture高级用例]
***  link:/mule-user-guide/v/3.5/mule-security[安全在骡子]
**  link:/mule-user-guide/v/3.5/developing[发展]
***  link:/mule-user-guide/v/3.5/anypoint-connectors[Anypoint连接器]
****  link:/mule-user-guide/v/3.5/installing-connectors[安装连接器]
****  link:/mule-user-guide/v/3.5/connector-configuration-reference[连接器配置参考]
****  link:/mule-user-guide/v/3.5/working-with-multiple-versions-of-connectors[使用多个版本的连接器]
****  link:/mule-user-guide/v/3.5/using-a-connector-to-access-an-oauth-api[使用连接器访问OAuth API]
****  link:/mule-user-guide/v/3.5/auto-paging-in-anypoint-connectors[在Anypoint连接器中自动寻呼]
****  link:/mule-user-guide/v/3.5/ajax-connector[Ajax连接器]
****  link:/mule-user-guide/v/3.5/amqp-connector[AMQP连接器]
*****  link:/mule-user-guide/v/3.5/amqp-connector-examples[AMQP连接器示例]
*****  link:/mule-user-guide/v/3.5/amqp-connector-reference[AMQP连接器参考]
****  link:/mule-user-guide/v/3.5/netsuite-connector[NetSuite连接器]
****  link:/mule-user-guide/v/3.5/cassandra-connector[Cassandra连接器]
****  link:/mule-user-guide/v/3.5/cmis-connector[CMIS连接器]
****  link:/mule-user-guide/v/3.5/database-connector[数据库连接器]
*****  link:/mule-user-guide/v/3.5/database-connector-examples[数据库连接器示例]
*****  link:/mule-user-guide/v/3.5/database-connector-reference[数据库连接器参考]
****  link:/mule-user-guide/v/3.5/dotnet-connector[DotNet连接器]
*****  link:/mule-user-guide/v/3.5/dotnet-connector-user-guide[DotNet连接器用户指南]
*****  link:/mule-user-guide/v/3.5/dotnet-connector-faqs[DotNet连接器常见问题]
****  link:/mule-user-guide/v/3.5/file-connector[文件连接器]
****  link:/mule-user-guide/v/3.5/ftp-connector[FTP连接器]
****  link:/mule-user-guide/v/3.5/generic-connector[通用连接器]
****  link:/mule-user-guide/v/3.5/http-connector[HTTP连接器]
****  link:/mule-user-guide/v/3.5/imap-connector[IMAP连接器]
****  link:/mule-user-guide/v/3.5/jdbc-connector[JDBC连接器]
****  link:/mule-user-guide/v/3.5/microsoft-dynamics-crm-connector[Microsoft Dynamics CRM连接器]
****  link:/mule-user-guide/v/3.5/microsoft-sharepoint-2013-connector[Microsoft SharePoint 2013连接器]
****  link:/mule-user-guide/v/3.5/msmq-connector[MSMQ连接器]
*****  link:/mule-user-guide/v/3.5/msmq-connector-faqs[MSMQ连接器常见问题]
*****  link:/mule-user-guide/v/3.5/msmq-connector-user-guide[MSMQ连接器用户指南]
****  link:/mule-user-guide/v/3.5/pop3-connector[POP3连接器]
****  link:/mule-user-guide/v/3.5/quartz-connector[石英连接器]
****  link:/mule-user-guide/v/3.5/salesforce-connector[Salesforce连接器]
*****  link:/mule-user-guide/v/3.5/salesforce-connector-reference[Salesforce连接器参考]
*****  link:/mule-user-guide/v/3.5/salesforce-connector-authentication[Salesforce连接器身份验证]
*****  link:/mule-user-guide/v/3.5/salesforce-contact-aggregation-example[Salesforce联系人聚合示例]
****  link:/mule-user-guide/v/3.5/sap-connector[SAP连接器]
****  link:/mule-user-guide/v/3.5/concur-connector[SAP Concur连接器]
****  link:/mule-user-guide/v/3.5/servicenow-connector[ServiceNow连接器]
****  link:/mule-user-guide/v/3.5/servlet-connector[Servlet连接器]
****  link:/mule-user-guide/v/3.5/sftp-connector[SFTP连接器]
****  link:/mule-user-guide/v/3.5/siebel-connector[Siebel连接器]
****  link:/mule-user-guide/v/3.5/web-service-consumer[Web服务使用者]
*****  link:/mule-user-guide/v/3.5/web-service-consumer-reference[Web服务消费者参考]
****  link:/mule-user-guide/v/3.5/wmq-connector[WMQ连接器]
****  link:/mule-user-guide/v/3.5/workday-connector[工作日连接器]
***  link:/mule-user-guide/v/3.5/components[组件]
****  link:/mule-user-guide/v/3.5/configuring-components[配置组件]
*****  link:/mule-user-guide/v/3.5/configuring-java-components[配置Java组件]
*****  link:/mule-user-guide/v/3.5/developing-components[开发组件]
*****  link:/mule-user-guide/v/3.5/entry-point-resolver-configuration-reference[入口点解析器配置参考]
*****  link:/mule-user-guide/v/3.5/component-bindings[组件绑定]
*****  link:/mule-user-guide/v/3.5/using-interceptors[使用拦截器]
****  link:/mule-user-guide/v/3.5/cxf-component-reference[CXF组件参考]
****  link:/mule-user-guide/v/3.5/echo-component-reference[回声组件参考]
****  link:/mule-user-guide/v/3.5/expression-component-reference[表达组件参考]
****  link:/mule-user-guide/v/3.5/flow-reference-component-reference[流参考组件参考]
****  link:/mule-user-guide/v/3.5/http-static-resource-handler[HTTP静态资源处理程序]
****  link:/mule-user-guide/v/3.5/http-response-builder[HTTP响应生成器]
****  link:/mule-user-guide/v/3.5/invoke-component-reference[调用组件引用]
****  link:/mule-user-guide/v/3.5/java-component-reference[Java组件参考]
****  link:/mule-user-guide/v/3.5/logger-component-reference[记录器组件参考]
****  link:/mule-user-guide/v/3.5/rest-component-reference[REST组件参考]
****  link:/mule-user-guide/v/3.5/script-component-reference[脚本组件参考]
*****  link:/mule-user-guide/v/3.5/groovy-component-reference[Groovy组件参考]
*****  link:/mule-user-guide/v/3.5/javascript-component-reference[JavaScript组件参考]
*****  link:/mule-user-guide/v/3.5/python-component-reference[Python组件参考]
*****  link:/mule-user-guide/v/3.5/ruby-component-reference[Ruby组件参考]
***  link:/mule-user-guide/v/3.5/filters[过滤器]
****  link:/mule-user-guide/v/3.5/custom-filter[定制过滤器]
****  link:/mule-user-guide/v/3.5/exception-filter[异常过滤器]
****  link:/mule-user-guide/v/3.5/filter-ref[过滤器参考]
****  link:/mule-user-guide/v/3.5/logic-filter[逻辑滤波器]
****  link:/mule-user-guide/v/3.5/message-filter[消息过滤器]
****  link:/mule-user-guide/v/3.5/message-property-filter[消息属性过滤器]
****  link:/mule-user-guide/v/3.5/regex-filter[正则表达式过滤器]
****  link:/mule-user-guide/v/3.5/schema-validation-filter[模式验证过滤器]
****  link:/mule-user-guide/v/3.5/wildcard-filter[通配符过滤器]
***  link:/mule-user-guide/v/3.5/routers[路由器]
****  link:/mule-user-guide/v/3.5/routing-message-processors[路由消息处理器]
****  link:/mule-user-guide/v/3.5/all-flow-control-reference[所有流量控制参考]
****  link:/mule-user-guide/v/3.5/choice-flow-control-reference[选择流量控制参考]
****  link:/mule-user-guide/v/3.5/scatter-gather[分散 - 集中]
****  link:/mule-user-guide/v/3.5/splitter-flow-control-reference[分流器流量控制参考]
***  link:/mule-user-guide/v/3.5/scopes[领域]
****  link:/mule-user-guide/v/3.5/async-scope-reference[异步范围参考]
****  link:/mule-user-guide/v/3.5/cache-scope[缓存范围]
****  link:/mule-user-guide/v/3.5/foreach[的foreach]
****  link:/mule-user-guide/v/3.5/message-enricher[消息Enricher]
****  link:/mule-user-guide/v/3.5/poll-reference[投票参考]
*****  link:/mule-user-guide/v/3.5/poll-schedulers[投票调度程序]
****  link:/mule-user-guide/v/3.5/request-reply-scope[请求 - 应答范围]
****  link:/mule-user-guide/v/3.5/transactional[交易]
****  link:/mule-user-guide/v/3.5/until-successful-scope[直到成功范围]
***  link:/mule-user-guide/v/3.5/transformers[变形金刚]
****  link:/mule-user-guide/v/3.5/using-transformers[使用变形金刚]
*****  link:/mule-user-guide/v/3.5/transformers-configuration-reference[变压器配置参考]
*****  link:/mule-user-guide/v/3.5/native-support-for-json[本机支持JSON]
*****  link:/mule-user-guide/v/3.5/xmlprettyprinter-transformer[XmlPrettyPrinter变压器]
****  link:/mule-user-guide/v/3.5/creating-custom-transformers[创建自定义变形金刚]
*****  link:/mule-user-guide/v/3.5/creating-flow-objects-and-transformers-using-annotations[使用注释创建流对象和变形金刚]
*****  link:/mule-user-guide/v/3.5/function-annotation[功能注释]
*****  link:/mule-user-guide/v/3.5/groovy-annotation[Groovy注释]
*****  link:/mule-user-guide/v/3.5/inboundattachments-annotation[InboundAttachments注释]
*****  link:/mule-user-guide/v/3.5/inboundheaders-annotation[InboundHeaders注解]
*****  link:/mule-user-guide/v/3.5/lookup-annotation[查找注释]
*****  link:/mule-user-guide/v/3.5/mule-annotation[骡子注释]
*****  link:/mule-user-guide/v/3.5/outboundattachments-annotation[OutboundAttachments注释]
*****  link:/mule-user-guide/v/3.5/outboundheaders-annotation[OutboundHeaders注释]
*****  link:/mule-user-guide/v/3.5/payload-annotation[有效载荷注释]
*****  link:/mule-user-guide/v/3.5/schedule-annotation[计划注释]
*****  link:/mule-user-guide/v/3.5/transformer-annotation[变压器注释]
*****  link:/mule-user-guide/v/3.5/xpath-annotation[XPath注释]
*****  link:/mule-user-guide/v/3.5/creating-custom-transformer-classes[创建自定义转换器类]
****  link:/mule-user-guide/v/3.5/append-string-transformer-reference[附加字符串转换器参考]
****  link:/mule-user-guide/v/3.5/attachment-transformer-reference[附件变压器参考]
****  link:/mule-user-guide/v/3.5/expression-transformer-reference[表达式转换器参考]
****  link:/mule-user-guide/v/3.5/java-transformer-reference[Java变压器参考]
****  link:/mule-user-guide/v/3.5/object-to-xml-transformer-reference[对XML转换器参考的对象]
****  link:/mule-user-guide/v/3.5/parse-template-reference[解析模板参考]
****  link:/mule-user-guide/v/3.5/property-transformer-reference[属性变换器参考]
****  link:/mule-user-guide/v/3.5/script-transformer-reference[脚本变换器参考]
****  link:/mule-user-guide/v/3.5/session-variable-transformer-reference[会话变量变换器参考]
****  link:/mule-user-guide/v/3.5/set-payload-transformer-reference[设置有效负载变换器参考]
****  link:/mule-user-guide/v/3.5/variable-transformer-reference[可变变压器参考]
****  link:/mule-user-guide/v/3.5/xml-to-object-transformer-reference[XML到对象转换器参考]
****  link:/mule-user-guide/v/3.5/xslt-transformer-reference[XSLT变压器参考]
****  link:/mule-user-guide/v/3.5/business-events[商业活动]
***  link:/mule-user-guide/v/3.5/error-handling[错误处理]
****  link:/mule-user-guide/v/3.5/catch-exception-strategy[捕捉异常策略]
****  link:/mule-user-guide/v/3.5/choice-exception-strategy[选择例外策略]
****  link:/mule-user-guide/v/3.5/reference-exception-strategy[参考例外策略]
****  link:/mule-user-guide/v/3.5/rollback-exception-strategy[回滚异常策略]
****  link:/mule-user-guide/v/3.5/exception-strategy-most-common-use-cases[异常策略最常见的用例]
***  link:/mule-user-guide/v/3.5/mule-expression-language-mel[Mule表达语言MEL]
****  link:/mule-user-guide/v/3.5/mule-expression-language-basic-syntax[Mule表达式语言基本语法]
****  link:/mule-user-guide/v/3.5/mule-expression-language-examples[Mule表达语言示例]
****  link:/mule-user-guide/v/3.5/mule-expression-language-reference[Mule表达式语言参考]
*****  link:/mule-user-guide/v/3.5/mule-expression-language-date-and-time-functions[Mule表达语言日期和时间函数]
****  link:/mule-user-guide/v/3.5/mule-expression-language-tips[Mule表达语言技巧]
***  link:/mule-user-guide/v/3.5/using-maven-with-mule[和Mule一起使用Maven]
****  link:/mule-user-guide/v/3.5/configuring-maven-pom-files-and-settings[配置Maven POM文件和设置]
****  link:/mule-user-guide/v/3.5/maven-reference[Maven参考]
***  link:/mule-user-guide/v/3.5/batch-processing[批量处理]
****  link:/mule-user-guide/v/3.5/batch-filters-and-batch-commit[批量过滤器和批量提交]
****  link:/mule-user-guide/v/3.5/batch-processing-reference[批处理参考]
****  link:/mule-user-guide/v/3.5/batch-streaming-and-job-execution[批处理流和作业执行]
****  link:/mule-user-guide/v/3.5/record-variable[记录变量]
***  link:/mule-user-guide/v/3.5/transaction-management[交易管理]
****  link:/mule-user-guide/v/3.5/single-resource-transactions[单一资源交易]
****  link:/mule-user-guide/v/3.5/multiple-resource-transactions[多资源交易]
****  link:/mule-user-guide/v/3.5/xa-transactions[XA交易]
****  link:/mule-user-guide/v/3.5/using-bitronix-to-manage-transactions[使用Bitronix管理事务]
***  link:/mule-user-guide/v/3.5/the-properties-editor[属性编辑器]
***  link:/mule-user-guide/v/3.5/adding-and-removing-user-libraries[添加和删​​除用户库]
***  link:/mule-user-guide/v/3.5/shared-resources[共享资源]
***  link:/mule-user-guide/v/3.5/mule-versus-web-application-server[Mule与Web应用程序服务器]
***  link:/mule-user-guide/v/3.5/publishing-and-consuming-apis-with-mule[使用Mule发布和使用API]
****  link:/mule-user-guide/v/3.5/publishing-a-soap-api[发布一个SOAP API]
*****  link:/mule-user-guide/v/3.5/securing-a-soap-api[保护SOAP API]
*****  link:/mule-user-guide/v/3.5/extra-cxf-component-configurations[额外的CXF组件配置]
****  link:/mule-user-guide/v/3.5/consuming-a-soap-api[使用SOAP API]
****  link:/mule-user-guide/v/3.5/publishing-a-rest-api[发布REST API]
****  link:/mule-user-guide/v/3.5/consuming-a-rest-api[使用REST API]
*****  link:/mule-user-guide/v/3.5/rest-api-examples[REST API示例]
***  link:/mule-user-guide/v/3.5/advanced-usage-of-mule-esb[Mule ESB的高级用法]
****  link:/mule-user-guide/v/3.5/storing-objects-in-the-registry[将对象存储在注册表中]
****  link:/mule-user-guide/v/3.5/object-scopes[对象范围]
****  link:/mule-user-guide/v/3.5/using-mule-with-spring[春天使用骡子]
*****  link:/mule-user-guide/v/3.5/sending-and-receiving-mule-events-in-spring[在春季发送和接收Mule事件]
*****  link:/mule-user-guide/v/3.5/spring-application-contexts[Spring应用程序上下文]
*****  link:/mule-user-guide/v/3.5/using-spring-beans-as-flow-components[使用Spring Beans作为流程组件]
****  link:/mule-user-guide/v/3.5/configuring-properties[配置属性]
****  link:/mule-user-guide/v/3.5/creating-and-managing-a-cluster-manually[手动创建和管理群集]
****  link:/mule-user-guide/v/3.5/distributed-file-polling[分布式文件轮询]
****  link:/mule-user-guide/v/3.5/distributed-locking[分布式锁定]
****  link:/mule-user-guide/v/3.5/streaming[流]
****  link:/mule-user-guide/v/3.5/about-configuration-builders[关于配置建造者]
****  link:/mule-user-guide/v/3.5/internationalizing-strings[国际化字符串]
****  link:/mule-user-guide/v/3.5/bootstrapping-the-registry[引导注册表]
****  link:/mule-user-guide/v/3.5/tuning-performance[调整性能]
****  link:/mule-user-guide/v/3.5/mule-agents[骡代理]
*****  link:/mule-user-guide/v/3.5/agent-security-disabled-weak-ciphers[代理安全：禁用弱密码]
*****  link:/mule-user-guide/v/3.5/jmx-management[JMX管理]
****  link:/mule-user-guide/v/3.5/flow-processing-strategies[流程处理策略]
****  link:/mule-user-guide/v/3.5/reliability-patterns[可靠性模式]
****  link:/mule-user-guide/v/3.5/mule-object-stores[骡子对象商店]
****  link:/mule-user-guide/v/3.5/configuring-reconnection-strategies[配置重新连接策略]
****  link:/mule-user-guide/v/3.5/using-the-mule-client[使用Mule客户端]
****  link:/mule-user-guide/v/3.5/using-web-services[使用Web服务]
*****  link:/mule-user-guide/v/3.5/proxying-web-services[代理Web服务]
*****  link:/mule-user-guide/v/3.5/using-.net-web-services-with-mule[与Mule一起使用.NET Web服务]
****  link:/mule-user-guide/v/3.5/passing-additional-arguments-to-the-jvm-to-control-mule[将附加参数传递给JVM以控制Mule]
**  link:/mule-user-guide/v/3.5/securing[保护]
***  link:/mule-user-guide/v/3.5/anypoint-enterprise-security[Anypoint企业安全]
****  link:/mule-user-guide/v/3.5/installing-anypoint-enterprise-security[安装Anypoint Enterprise Security]
****  link:/mule-user-guide/v/3.5/mule-secure-token-service[Mule安全令牌服务]
*****  link:/mule-user-guide/v/3.5/creating-an-oauth-2.0-web-service-provider[创建一个Oauth 2.0 Web服务提供程序]
*****  link:/mule-user-guide/v/3.5/authorization-grant-types[授权授予类型]
****  link:/mule-user-guide/v/3.5/mule-credentials-vault[Mule证书库]
****  link:/mule-user-guide/v/3.5/mule-message-encryption-processor[Mule消息加密处理器]
*****  link:/mule-user-guide/v/3.5/pgp-encrypter[PGP加密器]
****  link:/mule-user-guide/v/3.5/mule-digital-signature-processor[Mule数字签名处理器]
****  link:/mule-user-guide/v/3.5/anypoint-filter-processor[Anypoint滤波器处理器]
****  link:/mule-user-guide/v/3.5/mule-crc32-processor[Mule CRC32处理器]
****  link:/mule-user-guide/v/3.5/anypoint-enterprise-security-example-application[Anypoint企业安全示例应用程序]
****  link:/mule-user-guide/v/3.5/mule-sts-oauth-2.0-example-application[Mule STS Oauth 2.0示例应用程序]
***  link:/mule-user-guide/v/3.5/configuring-security[配置安全性]
****  link:/mule-user-guide/v/3.5/configuring-the-spring-security-manager[配置Spring Security Manager]
****  link:/mule-user-guide/v/3.5/component-authorization-using-spring-security[使用Spring Security的组件授权]
****  link:/mule-user-guide/v/3.5/setting-up-ldap-provider-for-spring-security[为Spring Security设置LDAP提供程序]
****  link:/mule-user-guide/v/3.5/upgrading-from-acegi-to-spring-security[从Acegi升级到Spring Security]
****  link:/mule-user-guide/v/3.5/encryption-strategies[加密策略]
****  link:/mule-user-guide/v/3.5/pgp-security[PGP安全]
****  link:/mule-user-guide/v/3.5/jaas-security[Jaas安全]
****  link:/mule-user-guide/v/3.5/saml-module[SAML模块]
***  link:/mule-user-guide/v/3.5/fips-140-2-compliance-support[FIPS 140-2合规性支持]
**  link:/mule-user-guide/v/3.5/debugging[调试]
***  link:/mule-user-guide/v/3.5/troubleshooting[故障排除]
****  link:/mule-user-guide/v/3.5/configuring-mule-stacktraces[配置Mule Stacktraces]
****  link:/mule-user-guide/v/3.5/logging[记录]
*****  link:/mule-user-guide/v/3.5/logging-with-mule-esb-3.x[记录Mule ESB 3.x]
****  link:/mule-user-guide/v/3.5/step-debugging[步骤调试]
**  link:/mule-user-guide/v/3.5/testing[测试]
***  link:/mule-user-guide/v/3.5/introduction-to-testing-mule[测试骡简介]
***  link:/mule-user-guide/v/3.5/unit-testing[单元测试]
***  link:/mule-user-guide/v/3.5/functional-testing[功能测试]
***  link:/mule-user-guide/v/3.5/testing-strategies[测试策略]
**  link:/mule-user-guide/v/3.5/deploying[部署]
***  link:/mule-user-guide/v/3.5/starting-and-stopping-mule-esb[启动和停止Mule ESB]
***  link:/mule-user-guide/v/3.5/deployment-scenarios[部署方案]
****  link:/mule-user-guide/v/3.5/choosing-the-right-clustering-topology[选择正确的群集拓扑]
****  link:/mule-user-guide/v/3.5/embedding-mule-in-a-java-application-or-webapp[将Mule嵌入到Java应用程序或Web应用程序中]
****  link:/mule-user-guide/v/3.5/deploying-mule-to-jboss[部署Mule到JBoss]
*****  link:/mule-user-guide/v/3.5/mule-as-mbean[作为MBean的骡子]
****  link:/mule-user-guide/v/3.5/deploying-mule-to-weblogic[将Mule部署到WebLogic]
****  link:/mule-user-guide/v/3.5/deploying-mule-to-websphere[将Mule部署到WebSphere]
****  link:/mule-user-guide/v/3.5/deploying-mule-as-a-service-to-tomcat[将Mule作为服务部署到Tomcat]
****  link:/mule-user-guide/v/3.5/application-server-based-hot-deployment[基于应用服务器的热部署]
****  link:/mule-user-guide/v/3.5/classloader-control-in-mule[Mule中的类加载器控制]
***  link:/mule-user-guide/v/3.5/deploying-to-multiple-environments[部署到多个环境]
***  link:/mule-user-guide/v/3.5/mule-high-availability-ha-clusters[Mule高可用性HA集群]
****  link:/mule-user-guide/v/3.5/evaluating-mule-high-availability-clusters-demo[评估Mule高可用性集群演示]
*****  link:/mule-user-guide/v/3.5/1-installing-the-demo-bundle[1  - 安装演示软件包]
*****  link:/mule-user-guide/v/3.5/2-creating-a-cluster[2  - 创建一个群集]
*****  link:/mule-user-guide/v/3.5/3-deploying-an-application[3  - 部署应用程序]
*****  link:/mule-user-guide/v/3.5/4-applying-load-to-the-cluster[4  - 将加载应用于群集]
*****  link:/mule-user-guide/v/3.5/5-witnessing-failover[5  - 见证故障转移]
*****  link:/mule-user-guide/v/3.5/6-troubleshooting-and-next-steps[6  - 故障排除和后续步骤]
***  link:/mule-user-guide/v/3.5/mule-deployment-model[Mule部署模型]
****  link:/mule-user-guide/v/3.5/hot-deployment[热部署]
****  link:/mule-user-guide/v/3.5/application-deployment[应用程序部署]
****  link:/mule-user-guide/v/3.5/application-format[申请格式]
****  link:/mule-user-guide/v/3.5/deployment-descriptor[部署描述符]
***  link:/mule-user-guide/v/3.5/configuring-logging[配置日志记录]
***  link:/mule-user-guide/v/3.5/mule-server-notifications[Mule服务器通知]
***  link:/mule-user-guide/v/3.5/profiling-mule[剖析Mule]
***  link:/mule-user-guide/v/3.5/hardening-your-mule-installation[加强你的骡子安装]
***  link:/mule-user-guide/v/3.5/configuring-mule-for-different-deployment-scenarios[针对不同的部署方案配置Mule]
****  link:/mule-user-guide/v/3.5/configuring-mule-as-a-linux-or-unix-daemon[将Mule配置为Linux或Unix守护进程]
****  link:/mule-user-guide/v/3.5/configuring-mule-as-a-windows-service[将Mule配置为Windows服务]
****  link:/mule-user-guide/v/3.5/configuring-mule-to-run-from-a-script[配置Mule从脚本运行]
***  link:/mule-user-guide/v/3.5/preparing-a-gitignore-file[准备一个gitignore文件]
**  link:/mule-user-guide/v/3.5/extending[扩展]
***  link:/mule-user-guide/v/3.5/extending-components[扩展组件]
***  link:/mule-user-guide/v/3.5/custom-message-processors[自定义消息处理器]
***  link:/mule-user-guide/v/3.5/creating-example-archetypes[创建示例原型]
***  link:/mule-user-guide/v/3.5/creating-a-custom-xml-namespace[创建一个自定义的XML命名空间]
***  link:/mule-user-guide/v/3.5/creating-module-archetypes[创建模块原型]
***  link:/mule-user-guide/v/3.5/creating-catalog-archetypes[创建目录原型]
***  link:/mule-user-guide/v/3.5/creating-project-archetypes[创建项目原型]
***  link:/mule-user-guide/v/3.5/creating-transports[创建传输]
****  link:/mule-user-guide/v/3.5/transport-archetype[运输原型]
****  link:/mule-user-guide/v/3.5/transport-service-descriptors[运输服务描述符]
***  link:/mule-user-guide/v/3.5/creating-custom-routers[创建自定义路由器]
**  link:/mule-user-guide/v/3.5/reference[参考]
***  link:/mule-user-guide/v/3.5/team-development-with-mule[与Mule合作开发团队]
****  link:/mule-user-guide/v/3.5/modularizing-your-configuration-files-for-team-development[模块化您的配置文件以进行团队开发]
****  link:/mule-user-guide/v/3.5/using-side-by-side-configuration-files[使用并行配置文件]
****  link:/mule-user-guide/v/3.5/using-parameters-in-your-configuration-files[在配置文件中使用参数]
****  link:/mule-user-guide/v/3.5/using-modules-in-your-application[在应用程序中使用模块]
****  link:/mule-user-guide/v/3.5/sharing-custom-code[共享自定义代码]
****  link:/mule-user-guide/v/3.5/sharing-custom-configuration-fragments[共享自定义配置片段]
****  link:/mule-user-guide/v/3.5/sharing-custom-configuration-patterns[共享自定义配置模式]
****  link:/mule-user-guide/v/3.5/sharing-applications[共享应用程序]
****  link:/mule-user-guide/v/3.5/sustainable-software-development-practices-with-mule[可持续软件开发实践与Mule]
*****  link:/mule-user-guide/v/3.5/reproducible-builds[可复制的版本]
*****  link:/mule-user-guide/v/3.5/continuous-integration[持续集成]
***  link:/mule-user-guide/v/3.5/configuration-patterns[配置模式]
****  link:/mule-user-guide/v/3.5/understanding-mule-configuration[了解骡子配置]
*****  link:/mule-user-guide/v/3.5/about-the-xml-configuration-file[关于XML配置文件]
****  link:/mule-user-guide/v/3.5/choosing-between-flows-and-patterns[选择流和模式]
*****  link:/mule-user-guide/v/3.5/using-flows-for-service-orchestration[使用流进行服务编排]
****  link:/mule-user-guide/v/3.5/using-mule-configuration-patterns[使用Mule配置模式]
*****  link:/mule-user-guide/v/3.5/pattern-based-configuration[基于模式的配置]
*****  link:/mule-user-guide/v/3.5/simple-service-pattern[简单的服务模式]
*****  link:/mule-user-guide/v/3.5/bridge-pattern[桥梁模式]
*****  link:/mule-user-guide/v/3.5/validator-pattern[验证器模式]
*****  link:/mule-user-guide/v/3.5/web-service-proxy-pattern[Web服务代理模式]
*****  link:/mule-user-guide/v/3.5/http-proxy-pattern[HTTP代理模式]
*****  link:/mule-user-guide/v/3.5/about-mule-configuration[关于Mule配置]
*****  link:/mule-user-guide/v/3.5/understanding-enterprise-integration-patterns-using-mule[使用Mule了解企业集成模式]
*****  link:/mule-user-guide/v/3.5/understanding-orchestration-using-mule[了解使用Mule的编排]
*****  link:/mule-user-guide/v/3.5/understanding-configuration-patterns-using-mule[使用Mule了解配置模式]
*****  link:/mule-user-guide/v/3.5/connecting-with-transports-and-connectors[连接运输和连接器]
*****  link:/mule-user-guide/v/3.5/using-mule-with-web-services[在Web服务中使用Mule]
***  link:/mule-user-guide/v/3.5/general-configuration-reference[一般配置参考]
****  link:/mule-user-guide/v/3.5/bpm-configuration-reference[BPM配置参考]
****  link:/mule-user-guide/v/3.5/component-configuration-reference[组件配置参考]
****  link:/mule-user-guide/v/3.5/endpoint-configuration-reference[端点配置参考]
*****  link:/mule-user-guide/v/3.5/mule-endpoint-uris[Mule端点URI]
****  link:/mule-user-guide/v/3.5/exception-strategy-configuration-reference[例外策略配置参考]
****  link:/mule-user-guide/v/3.5/filters-configuration-reference[过滤器配置参考]
****  link:/mule-user-guide/v/3.5/global-settings-configuration-reference[全局设置配置参考]
****  link:/mule-user-guide/v/3.5/notifications-configuration-reference[通知配置参考]
****  link:/mule-user-guide/v/3.5/properties-configuration-reference[属性配置参考]
****  link:/mule-user-guide/v/3.5/security-manager-configuration-reference[安全管理器配置参考]
****  link:/mule-user-guide/v/3.5/transactions-configuration-reference[事务配置参考]
***  link:/mule-user-guide/v/3.5/transports-reference[传输参考]
****  link:/mule-user-guide/v/3.5/connecting-using-transports[使用传输连接]
*****  link:/mule-user-guide/v/3.5/configuring-a-transport[配置传输]
****  link:/mule-user-guide/v/3.5/ajax-transport-reference[AJAX传输参考]
****  link:/mule-user-guide/v/3.5/ejb-transport-reference[EJB传输参考]
****  link:/mule-user-guide/v/3.5/email-transport-reference[电子邮件传输参考]
****  link:/mule-user-guide/v/3.5/file-transport-reference[文件传输参考]
****  link:/mule-user-guide/v/3.5/ftp-transport-reference[FTP传输参考]
****  link:/mule-user-guide/v/3.5/mulesoft-enterprise-java-connector-for-sap-reference[适用于SAP参考的MuleSoft Enterprise Java连接器]
*****  link:/mule-user-guide/v/3.5/sap-jco-extended-properties[SAP JCo扩展属性]
*****  link:/mule-user-guide/v/3.5/sap-jco-server-services-configuration[SAP JCo服务器服务配置]
*****  link:/mule-user-guide/v/3.5/outbound-endpoint-transactions[出站端点事务]
*****  link:/mule-user-guide/v/3.5/troubleshooting-sap-connector[排除SAP连接器故障]
*****  link:/mule-user-guide/v/3.5/xml-definitions[XML定义]
****  link:/mule-user-guide/v/3.5/http-transport-reference[HTTP传输参考]
****  link:/mule-user-guide/v/3.5/https-transport-reference[HTTPS传输参考]
****  link:/mule-user-guide/v/3.5/imap-transport-reference[IMAP传输参考]
****  link:/mule-user-guide/v/3.5/jdbc-transport-reference[JDBC传输参考]
****  link:/mule-user-guide/v/3.5/jetty-transport-reference[码头运输参考]
*****  link:/mule-user-guide/v/3.5/jetty-ssl-transport[Jetty SSL Transport]
****  link:/mule-user-guide/v/3.5/jms-transport-reference[JMS传输参考]
*****  link:/mule-user-guide/v/3.5/activemq-integration[ActiveMQ集成]
*****  link:/mule-user-guide/v/3.5/hornetq-integration[HornetQ集成]
*****  link:/mule-user-guide/v/3.5/open-mq-integration[打开MQ集成]
*****  link:/mule-user-guide/v/3.5/solace-jms[Solace JMS]
*****  link:/mule-user-guide/v/3.5/tibco-ems-integration[Tibco EMS集成]
****  link:/mule-user-guide/v/3.5/multicast-transport-reference[多播传输参考]
****  link:/mule-user-guide/v/3.5/pop3-transport-reference[POP3传输参考]
****  link:/mule-user-guide/v/3.5/quartz-transport-reference[石英运输参考]
****  link:/mule-user-guide/v/3.5/rmi-transport-reference[RMI传输参考]
****  link:/mule-user-guide/v/3.5/servlet-transport-reference[Servlet传输参考]
****  link:/mule-user-guide/v/3.5/sftp-transport-reference[SFTP传输参考]
****  link:/mule-user-guide/v/3.5/smtp-transport-reference[SMTP传输参考]
****  link:/mule-user-guide/v/3.5/ssl-and-tls-transports-reference[SSL和TLS传输参考]
****  link:/mule-user-guide/v/3.5/stdio-transport-reference[STDIO传输参考]
****  link:/mule-user-guide/v/3.5/tcp-transport-reference[TCP传输参考]
****  link:/mule-user-guide/v/3.5/udp-transport-reference[UDP传输参考]
****  link:/mule-user-guide/v/3.5/vm-transport-reference[VM传输参考]
****  link:/mule-user-guide/v/3.5/mule-wmq-transport-reference[Mule WMQ运输参考]
****  link:/mule-user-guide/v/3.5/wsdl-connectors[WSDL连接器]
****  link:/mule-user-guide/v/3.5/xmpp-transport-reference[XMPP传输参考]
***  link:/mule-user-guide/v/3.5/modules-reference[模块参考]
****  link:/mule-user-guide/v/3.5/atom-module-reference[Atom模块参考]
****  link:/mule-user-guide/v/3.5/bpm-module-reference[BPM模块参考]
*****  link:/mule-user-guide/v/3.5/drools-module-reference[Drools模块参考]
*****  link:/mule-user-guide/v/3.5/jboss-jbpm-module-reference[JBoss jBPM模块参考]
****  link:/mule-user-guide/v/3.5/cxf-module-reference[CXF模块参考]
*****  link:/mule-user-guide/v/3.5/cxf-module-overview[CXF模块概述]
*****  link:/mule-user-guide/v/3.5/building-web-services-with-cxf[使用CXF构建Web服务]
*****  link:/mule-user-guide/v/3.5/consuming-web-services-with-cxf[使用CXF消费Web服务]
*****  link:/mule-user-guide/v/3.5/enabling-ws-addressing[启用WS-Addressing]
*****  link:/mule-user-guide/v/3.5/enabling-ws-security[启用WS-Security]
*****  link:/mule-user-guide/v/3.5/cxf-error-handling[CXF错误处理]
*****  link:/mule-user-guide/v/3.5/proxying-web-services-with-cxf[使用CXF代理Web服务]
*****  link:/mule-user-guide/v/3.5/supported-web-service-standards[支持的Web服务标准]
*****  link:/mule-user-guide/v/3.5/using-a-web-service-client-directly[直接使用Web服务客户端]
*****  link:/mule-user-guide/v/3.5/using-http-get-requests[使用HTTP GET请求]
*****  link:/mule-user-guide/v/3.5/using-mtom[使用MTOM]
*****  link:/mule-user-guide/v/3.5/cxf-module-configuration-reference[CXF模块配置参考]
****  link:/mule-user-guide/v/3.5/data-bindings-reference[数据绑定参考]
****  link:/mule-user-guide/v/3.5/jaas-module-reference[JAAS模块参考]
****  link:/mule-user-guide/v/3.5/jboss-transaction-manager-reference[JBoss事务管理器参考]
****  link:/mule-user-guide/v/3.5/jersey-module-reference[泽西模块参考]
****  link:/mule-user-guide/v/3.5/json-module-reference[JSON模块参考]
****  link:/mule-user-guide/v/3.5/rss-module-reference[RSS模块参考]
****  link:/mule-user-guide/v/3.5/scripting-module-reference[脚本模块参考]
****  link:/mule-user-guide/v/3.5/spring-extras-module-reference[Spring Extras模块参考]
****  link:/mule-user-guide/v/3.5/sxc-module-reference[SXC模块参考]
****  link:/mule-user-guide/v/3.5/xml-module-reference[XML模块参考]
*****  link:/mule-user-guide/v/3.5/domtoxml-transformer[DomToXml变压器]
*****  link:/mule-user-guide/v/3.5/jaxb-bindings[JAXB绑定]
*****  link:/mule-user-guide/v/3.5/jaxb-transformers[JAXB变形金刚]
*****  link:/mule-user-guide/v/3.5/jxpath-extractor-transformer[JXPath提取变压器]
*****  link:/mule-user-guide/v/3.5/xml-namespaces[XML命名空间]
*****  link:/mule-user-guide/v/3.5/xmlobject-transformers[XmlObject变形金刚]
*****  link:/mule-user-guide/v/3.5/xmltoxmlstreamreader-transformer[XmlToXMLStreamReader变换器]
*****  link:/mule-user-guide/v/3.5/xpath-extractor-transformer[XPath提取变压器]
*****  link:/mule-user-guide/v/3.5/xquery-support[XQuery支持]
*****  link:/mule-user-guide/v/3.5/xquery-transformer[XQuery变换器]
*****  link:/mule-user-guide/v/3.5/xslt-transformer[XSLT变压器]
***  link:/mule-user-guide/v/3.5/non-mel-expressions-configuration-reference[非MEL表达式配置参考]
****  link:/mule-user-guide/v/3.5/using-non-mel-expressions[使用非MEL表达式]
***  link:/mule-user-guide/v/3.5/creating-non-mel-expression-evaluators[创建非MEL表达式评估器]
***  link:/mule-user-guide/v/3.5/schema-documentation[模式文档]
****  link:/mule-user-guide/v/3.5/notes-on-mule-3.0-schema-changes[关于Mule 3.0模式更改的注意事项]
***  link:/mule-user-guide/v/3.5/mule-esb-3-and-test-api-javadoc[Mule ESB 3和测试API Javadoc]
***  link:/mule-user-guide/v/3.5/mulesoft-security-update-policy[MuleSoft安全更新政策]
